--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -226,6 +226,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="..\3rdParty\imgui-1.87\imstb_truetype.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="BaseComponent.h" />
+    <ClInclude Include="Collider.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CSteamAchievements.h" />
     <ClInclude Include="Font.h" />
@@ -301,6 +302,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     </ClCompile>
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BaseComponent.cpp" />
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CSteamAchievements.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSCounter.cpp" />
