Moved all files to the right places and solved some errors

--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -164,6 +164,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BurgerTime.cpp" />
+    <ClCompile Include="LivesComponent.cpp" />
+    <ClCompile Include="PeterPepper.cpp" />
+    <ClCompile Include="ScoreComponent.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BurgerTimeCommands.h" />
+    <ClInclude Include="LivesComponent.h" />
+    <ClInclude Include="PeterPepper.h" />
+    <ClInclude Include="ScoreComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
