--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -244,6 +244,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Command.h" />
+    <ClInclude Include="DebugRenderComponent.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="FPSCounter.h" />
     <ClInclude Include="GameObject.h" />
@@ -315,6 +316,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="DebugRenderComponent.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSCounter.cpp" />
     <ClCompile Include="GameObject.cpp" />
