Seperated the Observer and Subject form the game code

--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="ScoreComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BTEvents.h" />
     <ClInclude Include="BurgerPart.h" />
     <ClInclude Include="BurgerTimeCommands.h" />
     <ClInclude Include="Ladder.h" />
