--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="Plate.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="BTEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
