Added Enemy class/ Player now dies when hit by enemies

--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -167,7 +167,9 @@
     <ClCompile Include="BurgerTime.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="HotdogController.cpp" />
     <ClCompile Include="Ladder.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
     <ClCompile Include="PeterPepper.cpp" />
     <ClCompile Include="Plate.cpp" />
@@ -180,7 +182,9 @@
     <ClInclude Include="BurgerTimeCommands.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="HotdogController.h" />
     <ClInclude Include="Ladder.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="LivesComponent.h" />
     <ClInclude Include="PeterPepper.h" />
     <ClInclude Include="Plate.h" />
