--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="Character.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="HotdogController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Level.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LivesComponent.h">
@@ -82,6 +88,12 @@
     </ClInclude>
     <ClInclude Include="Character.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="HotdogController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Level.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
