Added PickleController/ enemies can be killed by falling burger parts Player gets score by it

--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
     <ClCompile Include="PeterPepper.cpp" />
+    <ClCompile Include="PickleController.cpp" />
     <ClCompile Include="Plate.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="ScoreComponent.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="LivesComponent.h" />
     <ClInclude Include="PeterPepper.h" />
+    <ClInclude Include="PickleController.h" />
     <ClInclude Include="Plate.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="ScoreComponent.h" />
