--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="HotdogController.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="PickleController.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LivesComponent.h">
@@ -87,6 +90,9 @@
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="HotdogController.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="PickleController.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
