Enemies can now be stunned

--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="HotdogController.cpp" />
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
+    <ClCompile Include="PepperCloud.cpp" />
     <ClCompile Include="PeterPepper.cpp" />
     <ClCompile Include="PickleController.cpp" />
     <ClCompile Include="Plate.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="HotdogController.h" />
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="LivesComponent.h" />
+    <ClInclude Include="PepperCloud.h" />
     <ClInclude Include="PeterPepper.h" />
     <ClInclude Include="PickleController.h" />
     <ClInclude Include="Plate.h" />
