--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="PickleController.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="PepperCloud.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LivesComponent.h">
@@ -93,6 +96,9 @@
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="PickleController.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="PepperCloud.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
