--- a/BurgerTime/BurgerTime.vcxproj.filters
+++ b/BurgerTime/BurgerTime.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="PepperUI.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="SoundManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LivesComponent.h">
@@ -106,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="PepperUI.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundManager.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
