--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="BurgerTime.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="HotdogController.cpp" />
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="BurgerTimeCommands.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="HotdogController.h" />
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="LivesComponent.h" />
