--- a/BurgerTime/BurgerTime.vcxproj
+++ b/BurgerTime/BurgerTime.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="HighScore.cpp" />
     <ClCompile Include="HotdogController.cpp" />
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="HighScore.h" />
     <ClInclude Include="HotdogController.h" />
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="LivesComponent.h" />
